--- a/assets/app/components/pagination/pagination.component.html
+++ b/assets/app/components/pagination/pagination.component.html
@@ -1,7 +1,19 @@
-<div>
-    <strong>current page:</strong> {{currentPage}}
-    <strong>number of pages:</strong> {{numberOfPages}}
-</div>
 <ul class="pagination">
-    <li *ngFor="let number of [0,1,2,3,4]" (click)='onClick(number)'><a href="#">{{number}}</a></li>
+    <li *ngIf="currentPage > 1" (click)='onClick(currentPage - 1)'>
+        <a href="#" aria-label="Previous">
+            <span aria-hidden="true">&laquo;</span>
+        </a>
+    </li>
+
+    <li *ngIf="currentPage > 1" (click)='onClick(currentPage - 1)'><a href="#">{{currentPage - 1}}</a></li>
+
+    <li class="active" (click)='onClick(currentPage)'><a href="#">{{currentPage}}</a></li>
+
+    <li *ngFor="let number of numbersAfter" (click)='onClick(number)'><a href="#">{{number}}</a></li>
+
+    <li *ngIf="currentPage < numberOfPages" (click)='onClick(currentPage + 1)'>
+        <a href="#" aria-label="Next">
+            <span aria-hidden="true">&raquo;</span>
+        </a>
+    </li>
 </ul>
