changing button text

--- a/assets/app/components/beers.component.html
+++ b/assets/app/components/beers.component.html
@@ -19,7 +19,7 @@
 
                     <span class="card-title">{{beer.name.slice(0,20)}}</span>
 
-                    <a routerLink="/profile/{{beer.id}}" class="btn btn-primary btn-block">Profile</a>
+                    <a routerLink="/profile/{{beer.id}}" class="btn btn-primary btn-block">Deatils</a>
                 </div>
 
 
